# fastapi_authentication

./: DockerFile  Dockerfile  main.py  pyproject.toml  requirements.txt  startup.sh
src/controllers/: auth_controller.py  user_controller.py
src/lib/configs/: env_config.py
src/lib/db/: connect_db.py
src/lib/tokens/: generate_token.py
src/models/: user_model.py
src/routers/: auth_router.py  user_router.py
