[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.120.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
